# ZaryTrader-MNA

./: README.md  background.py  main.py  pyproject.toml  requirements.txt
